# argp

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.adoc  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
argh/: Cargo.toml
argh/examples/: simple_example.rs
argh/src/: lib.rs
argh/tests/: lib.rs
argh/tests/ui/duplicate-name/: duplicate-long-name.rs  duplicate-long-name.stderr
argh_derive/: Cargo.toml
argh_derive/src/: help.rs
argh_shared/: Cargo.toml
argp/: Cargo.toml
argp/examples/: argparse_rosetta_argp.rs  argparse_rosetta_null.rs  simple_example.rs  subcommands.rs
argp/src/: error.rs  help.rs  lib.rs  parser.rs
argp/src/term_size/: mod.rs  unix.rs
argp/tests/: lib.rs
argp/tests/ui/bad-long-names/: bad-long-names.rs  bad-long-names.stderr
argp/tests/ui/conflicting-tails/: positional-and-greedy.rs  positional-and-greedy.stderr
argp/tests/ui/duplicate-name/: duplicate-long-name.stderr  duplicate-short-name.rs  duplicate-short-name.stderr
argp_derive/: Cargo.toml
argp_derive/src/: errors.rs  help.rs  lib.rs  markdown.rs  parse_attrs.rs
argp_shared/src/: lib.rs
scripts/: faketty  report-size-overhead
