[package]
name = "argp"
version = "0.0.0"
authors = ["Jakub Jirutka <jakub@jirutka.cz>"]
edition = "2018"
keywords = ["args", "arguments", "derive", "cli"]
license = "BSD-3-Clause"
description = "Derive-based argument parser optimized for code size"
repository = "https://github.com/jirutka/argp"
readme = "README.md"

[dependencies]
argp_derive = { version = "0.0.0", path = "../argp_derive" }

[dev-dependencies]
once_cell = "1.10.0"
trybuild = "1.0.63"
