[package]
name = "argp"
version = "0.2.0"
authors = ["Jakub Jirutka <jakub@jirutka.cz>"]
edition = "2021"
rust-version = "1.56.0"
keywords = ["args", "arguments", "derive", "cli"]
license = "BSD-3-Clause"
description = "Derive-based argument parser optimized for code size"
repository = "https://github.com/jirutka/argp"
readme = "README.md"

[features]
default = ["subcommands", "term_size"]
# Enable support for subcommands. You can reduce the binary size by ~4 kiB by
# disabling it.
subcommands = ["argp_derive/subcommands"]
# Wrap help message dynamically based on terminal width. You can disable this
# feature if you want to avoid 'unsafe' code. It has no effect on binary size.
term_size = []

[dependencies]
argp_derive = { version = "0.2.0", path = "../argp_derive" }

[dev-dependencies]
once_cell = "1.10.0"
trybuild = "1.0.63"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
