[package]
name = "argp_derive"
version = "0.0.0"
authors = ["Jakub Jirutka <jakub@jirutka.cz>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Derive-based argument parsing optimized for code size"
repository = "https://github.com/jirutka/argp"
readme = "README.md"

[features]
redact_arg_values = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
