[package]
name = "argp_derive"
version = "0.2.0"
authors = ["Jakub Jirutka <jakub@jirutka.cz>"]
edition = "2021"
rust-version = "1.56.0"
license = "BSD-3-Clause"
description = "Derive-based argument parsing optimized for code size"
repository = "https://github.com/jirutka/argp"
readme = "README.md"

[lib]
proc-macro = true

[features]
subcommands = []

[dependencies]
proc-macro2 = "1.0"
pulldown-cmark = "0.9"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
indoc = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
